fix: [QA-139] 미션 execution GET/공유/피드 목록의 다중 이미지 응답 누락 수정